--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/websocket": "^1.0.10",
+    "express": "^4.18.2",
     "typescript": "^5.3.3",
     "websocket": "^1.0.34"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
