--- a/package.json
+++ b/package.json
@@ -5,17 +5,24 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsc -b && node dist/index.js"
+    "dev": "nodemon dist/index.js",
+    "build": "npx tsc -b"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/websocket": "^1.0.10",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "typescript": "^5.3.3",
-    "websocket": "^1.0.34"
+    "websocket": "^1.0.34",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5"
   }
 }
